methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value move
move (nbPas : Int, versLAvant : Boolean) = {
^MethodsArgs:2: error: not found: value nbPas
move (nbPas : Int, versLAvant : Boolean) = {
      ^MethodsArgs:2: error: not found: value versLAvant
move (nbPas : Int, versLAvant : Boolean) = {
                   ^MethodsArgs:3: error: not found: value versLAvant
  if (versLAvant == true) {
      ^MethodsArgs:4: error: not found: value nbPas
    for (compteur <- 1 to nbPas) {
                          ^MethodsArgs:8: error: not found: value nbPas
  for (compteur2 <- 1 to nbPas) {
                         ^